--- a/FrontEND/Page/ReservasUsuarios/ReservaUsuario.css
+++ b/FrontEND/Page/ReservasUsuarios/ReservaUsuario.css
@@ -516,3 +516,191 @@ main {
 }
 
 /* // HEADER */
+
+
+
+
+
+
+
+
+
+/*alerta personalizada :)*/
+
+#fondoOscuro {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+}
+
+#alertaPersonalizada {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(206, 224, 255);
+    width: 700px;
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow: 0px 0px 799999px 90px black;
+    z-index: 1000;
+}
+
+.p-alerta1 {
+    text-align: center;
+    font-size: 19px;
+    padding-top: 50px;
+}
+
+.p-alerta2 {
+    text-align: center;
+    font-size: 19px;
+    padding-top: 17px;
+}
+
+.botonyalerta {
+    height: 100%;
+}
+
+.boton-alerta {
+    display: flex;
+    height: 100%;
+    margin: 0 auto;
+    justify-content: end;
+    align-items: end;
+}
+
+#alertaPersonalizada button {
+    display: flex;
+    margin: 40px auto;
+    padding: 10px 50px;
+    border-radius: 10px;
+    border: 1px solid var(--secundario-color);
+    background-color: var(--principal-color);
+    box-shadow: 0 0 10px 1px black;
+    cursor: pointer;
+}
+
+#alertaPersonalizada button:hover {
+    opacity: .7;
+}
+
+
+/* FOOTER */
+
+footer {
+    margin-top: 500px;
+    width: 100%;
+    background-color: #979292;
+    min-height: 170px;
+}
+
+.footer-title {
+    width: 100%;
+    height: 40px;
+    background-color: #b8b0b0;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 18px 0;
+    font-size: 17px;
+    box-shadow: 0 5px 10px rgba(0, 2, 96, 0.2);
+    margin: 0;
+    user-select: none;
+    display: flex;
+}
+
+h4 {
+    display: flex;
+    font-size: 14px;
+    border-bottom: 1px solid black;
+    padding: 7px;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.footer-title-lit {
+    margin: 0;
+    padding: 0;
+}
+
+.copy {
+    margin: 0;
+    padding: 0 4px;
+    font-weight: bold;
+}
+
+.footer-text {
+    margin: 0;
+}
+
+.footer-cont {
+    width: 50%;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    user-select: none;
+    margin: 0 40px;
+}
+
+.footer-text {
+    padding-top: 15px;
+}
+
+.parrafo {
+    font-size: 14px;
+    margin: 10px;
+}
+
+.footer-cont2 {
+    width: 50%;
+    text-align: center;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    user-select: none;
+    margin: 0 40px;
+}
+
+.footer-cont2 a img {
+    width: 40px;
+    margin: 10px 15px 0 15px;
+    transition: transform 0.3s;
+}
+
+.footer-cont2 a img:hover {
+    transform: scale(1.1);
+    opacity: 0.7;
+}
+
+.contenido-footer {
+    display: flex;
+}
+
+@media (max-width: 680px) {
+    .contenido-footer {
+        display: block;
+    }
+    .footer-cont {
+        width: 100%;
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        user-select: none;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .footer-cont2 {
+        width: 100%;
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        user-select: none;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+}
