--- a/FrontEND/Page/Inicio/Inicio.css
+++ b/FrontEND/Page/Inicio/Inicio.css
@@ -75,13 +75,43 @@ main {
   height: 70px;
 }
 .carrito-container {
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+
 }
-.carrito-container:hover {
-  opacity: 0.7;
+.carrito-container:hover .producto-carrito{
+  display: block;
+}
+.carrito-container:hover .botonSolicitarReserva{
+  display: block;
+}
+.botonSolicitarReserva{
+  display: none;
+  width: 100%;
+  height: 100%;
+  padding: 14px;
+  cursor: pointer;
+  border: none;
+}
+.botonSolicitarReserva:hover{
+  box-shadow: inset 0 0 7px 0.5px black;
+}
+#productos-carrito{
+  position: absolute;
+  right: 120px;
+  top: 88px;
+}
+.producto-carrito{
+  display: none;
+  width: 420px;
+  background-color: rgb(237, 145, 145);
+  padding: 30px 10px;
+}
+.p-carrito{
+  margin: 0;
 }
 .imagen-carrito {
   width: 90px;
@@ -308,7 +338,7 @@ main {
   top: 0;
 }
 
-/*EN CASO DE QUE LA PANTALLA SEA MENOR A 820PX SE APLICA ESTO*/
+/*EN CASO DE QUE LA PANTALLA SEA MENOR A 700PX SE APLICA ESTO*/
 
 @media (max-width: 700px) {
   /* ---------- HEADER --------- */
@@ -389,54 +419,82 @@ main {
 
 /* // HEADER */
 
+
 /* PRIMER ANUNCIO INICIO*/
 .anuncio-Inicio-contenedor1 {
   position: relative;
-  width: 80%;
-  height: 275px;
+  height: 275px; /* Altura del contenedor */
   margin: 0 auto;
-  overflow: hidden;
-  background-image: url("../img/fondoAnuncio.png");
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.anuncio-Inicio1 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-.titulo-aluminio1 {
-  margin: 0;
-}
-.ofertas-container {
-  position: absolute;
-  top: 10px;
-  right: 50px;
-  display: flex;
-  background-color: rebeccapurple;
-  padding: 5px;
-}
-
-.nombre-e-imagen {
-  margin-right: 90px;
-}
-.nombre-e-imagen img {
   user-select: none;
 }
 
-.detalles-anuncio {
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
+.imagen-fondo {
+  width: 80%; /* Ajusta la imagen al ancho del contenedor */
+  height: auto; /* Mantiene la proporción de la imagen */
+  display: block; /* Evita el espacio en blanco debajo de la imagen */
+  margin: 0 auto;
 }
+.titulo-aluminio1 {
+  position: absolute; 
+  top: 40px;
+  left: 22%; 
+  font-size: 2vw;
+  color: red;
+}
+
+#ofertas{
+  width: 80%;
+  height: auto; /* Mantiene la proporción de la imagen */
+  display: flex;
+  margin: 0 auto;
+}
+
+.nombre-e-imagen {
+  position: absolute; 
+  top: 115px;
+  right: 45%;
+  font-size: 1vw; /* El tamaño de la fuente se ajusta proporcionalmente al ancho del viewport */
+}
+.h2-a{
+  width: 70px;
+  text-align: center;
+}
+.nombre-e-imagen img {
+  user-select: none;
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.detalles-anuncio {
+  position: absolute; 
+  top: 145px;
+  right: 28%; 
+  font-size: 1.3vw;
+  color: red;
+}
+
+@media (max-width: 820px){
+  .titulo-aluminio1 {
+    top: 24px;
+    left: 21%;
+  }
+  
+}
+@media (max-width: 1430px){
+.nombre-e-imagen {
+  top: 40px;
+  right: 43%; 
+}
+ 
+.detalles-anuncio {
+  top: 70px;
+  right: 28%;
+}
+  
+}
+
 
 /* INICIO */
 
