--- a/FrontEND/Page/Cuenta/Micuenta.css
+++ b/FrontEND/Page/Cuenta/Micuenta.css
@@ -253,11 +253,15 @@
   .ReservasAdmin:hover {
     background-color: rgba(177, 255, 239, 0.492);
   }
-  .MisReservas {
-    border-bottom: 1px solid black;
+  .user-nav{
+    padding: 10px 0;
+    background-color: #8dc3ea;
   }
-  .MisReservas:hover {
-    background-color: rgb(255, 248, 198);
+  .MisReservas {
+    border-bottom: 2px solid black;
+  }
+  .Micuenta{
+    border-bottom: 1px solid rgb(176, 176, 176);
   }
   .OfertaAdmin {
     border-bottom: 1px solid black;
@@ -424,8 +428,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 110px;
     font-size: 20px;
+    width: 90%;
+    margin: 110px auto 0 auto;
+    text-align: center;
 }
 .mas-info{
     text-decoration: none;
@@ -644,6 +650,47 @@ input[type="submit"]:hover{
     opacity: 0.7;
   }
   
+  
+/*alerta personalizada :)*/
+
+
+#alertaPersonalizada2 {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(206, 224, 255);
+  width: 700px;
+  border: 2px solid black;
+  border-radius: 15px;
+  box-shadow: 0px 0px 799999px 90px black;
+  z-index: 1000;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+#alertaMensaje2{
+  margin: 70px 0 20px 0;
+}
+
+#alertaPersonalizada2 button {
+  display: flex;
+  margin: 40px auto;
+  padding: 10px 50px;
+  border-radius: 10px;
+  border: 1px solid var(--secundario-color);
+  background-color: var(--principal-color);
+  box-shadow: 0 0 10px 1px black;
+  cursor: pointer;
+}
+.botones{
+  display: flex;
+}
+#alertaPersonalizada2 button:hover {
+  opacity: 0.7;
+}
+
   /* FOOTER */
   
   footer {
