--- a/FrontEND/Page/Productos/Productos.css
+++ b/FrontEND/Page/Productos/Productos.css
@@ -219,16 +219,13 @@ main {
   text-decoration: none;
   color: #000;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  background-color: #93a7f6;
 }
 .menuUser a:hover {
   opacity: 0.7;
   background-color: #afafaf;
 }
-.menuUser .a:hover {
-  opacity: 0.8;
-  background-color: #ebe8e8;
-  cursor: pointer;
-}
+
 .menu-desplegable:checked + .login-link + .menuUser {
   max-height: none;
   height: auto;
