--- a/FrontEND/Page/Cuenta/Micuenta.css
+++ b/FrontEND/Page/Cuenta/Micuenta.css
@@ -88,6 +88,14 @@ main {
 .carrito-container:hover .botonSolicitarReserva{
   display: block;
 }
+.botonEliminar{
+  width: 40px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+.botonEliminar:hover{
+  opacity: .7;
+}
 .botonSolicitarReserva{
   display: none;
   width: 100%;
@@ -95,23 +103,48 @@ main {
   padding: 14px;
   cursor: pointer;
   border: none;
+  border-left: 1px solid #a9a9a9;
+  border-right: 1px solid #a9a9a9;
+  border-bottom: 1px solid #a9a9a9;
 }
 .botonSolicitarReserva:hover{
   box-shadow: inset 0 0 7px 0.5px black;
+  border: none;
 }
 #productos-carrito{
   position: absolute;
   right: 120px;
   top: 88px;
+  box-shadow: 0 0 10px 1px black;
 }
 .producto-carrito{
   display: none;
   width: 420px;
-  background-color: rgb(237, 145, 145);
-  padding: 30px 10px;
+  background-color: rgb(218, 217, 217);
+  padding: 5px 10px;
+  border-left: 1px solid #a9a9a9;
+  border-right: 1px solid #a9a9a9;
+  border-bottom: 1px solid #a9a9a9;
+}
+.producto-carrito:hover{
+  background-color: rgb(206, 205, 205);
 }
 .p-carrito{
   margin: 0;
+  width: 100px;
+}
+.img-carrito-container{
+  display: flex;
+  justify-content: start;
+}
+.cada-producto{
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.img-producto-carrito{
+  width: 90px;
+  height: 75px;
 }
 .imagen-carrito {
   width: 90px;
@@ -418,6 +451,7 @@ main {
 }
 
 /* // HEADER */
+
 
 
 /* MAIN  */
