--- a/FrontEND/Page/Inicio/Inicio.css
+++ b/FrontEND/Page/Inicio/Inicio.css
@@ -88,6 +88,14 @@ main {
 .carrito-container:hover .botonSolicitarReserva{
   display: block;
 }
+.botonEliminar{
+  width: 40px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+.botonEliminar:hover{
+  opacity: .7;
+}
 .botonSolicitarReserva{
   display: none;
   width: 100%;
@@ -95,23 +103,48 @@ main {
   padding: 14px;
   cursor: pointer;
   border: none;
+  border-left: 1px solid #a9a9a9;
+  border-right: 1px solid #a9a9a9;
+  border-bottom: 1px solid #a9a9a9;
 }
 .botonSolicitarReserva:hover{
   box-shadow: inset 0 0 7px 0.5px black;
+  border: none;
 }
 #productos-carrito{
   position: absolute;
   right: 120px;
   top: 88px;
+  box-shadow: 0 0 10px 1px black;
 }
 .producto-carrito{
   display: none;
   width: 420px;
-  background-color: rgb(237, 145, 145);
-  padding: 30px 10px;
+  background-color: rgb(218, 217, 217);
+  padding: 5px 10px;
+  border-left: 1px solid #a9a9a9;
+  border-right: 1px solid #a9a9a9;
+  border-bottom: 1px solid #a9a9a9;
+}
+.producto-carrito:hover{
+  background-color: rgb(206, 205, 205);
 }
 .p-carrito{
   margin: 0;
+  width: 100px;
+}
+.img-carrito-container{
+  display: flex;
+  justify-content: start;
+}
+.cada-producto{
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.img-producto-carrito{
+  width: 90px;
+  height: 75px;
 }
 .imagen-carrito {
   width: 90px;
@@ -420,19 +453,18 @@ main {
 /* // HEADER */
 
 
-
 /* PRIMER ANUNCIO INICIO*/
 .anuncio-Inicio-contenedor1 {
   position: relative;
-  height: 275px; /* Altura del contenedor */
+  height: 275px;
   margin: 0 auto;
   user-select: none;
 }
 
 .imagen-fondo {
-  width: 80%; /* Ajusta la imagen al ancho del contenedor */
-  height: auto; /* Mantiene la proporción de la imagen */
-  display: block; /* Evita el espacio en blanco debajo de la imagen */
+  width: 80%;
+  height: auto;
+  display: block;
   margin: 0 auto;
 }
 .titulo-aluminio1 {
@@ -445,7 +477,7 @@ main {
 
 #ofertas{
   width: 80%;
-  height: auto; /* Mantiene la proporción de la imagen */
+  height: auto;
   display: flex;
   margin: 0 auto;
 }
@@ -454,7 +486,7 @@ main {
   position: absolute; 
   top: 115px;
   right: 45%;
-  font-size: 1vw; /* El tamaño de la fuente se ajusta proporcionalmente al ancho del viewport */
+  font-size: 1vw;
 }
 .h2-a{
   width: 70px;
