--- a/FrontEND/Page/Productos/Productos.css
+++ b/FrontEND/Page/Productos/Productos.css
@@ -88,6 +88,14 @@ main {
 .carrito-container:hover .botonSolicitarReserva{
   display: block;
 }
+.botonEliminar{
+  width: 40px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+.botonEliminar:hover{
+  opacity: .7;
+}
 .botonSolicitarReserva{
   display: none;
   width: 100%;
@@ -95,23 +103,48 @@ main {
   padding: 14px;
   cursor: pointer;
   border: none;
+  border-left: 1px solid #a9a9a9;
+  border-right: 1px solid #a9a9a9;
+  border-bottom: 1px solid #a9a9a9;
 }
 .botonSolicitarReserva:hover{
   box-shadow: inset 0 0 7px 0.5px black;
+  border: none;
 }
 #productos-carrito{
   position: absolute;
   right: 120px;
   top: 88px;
+  box-shadow: 0 0 10px 1px black;
 }
 .producto-carrito{
   display: none;
   width: 420px;
-  background-color: rgb(237, 145, 145);
-  padding: 30px 10px;
+  background-color: rgb(218, 217, 217);
+  padding: 5px 10px;
+  border-left: 1px solid #a9a9a9;
+  border-right: 1px solid #a9a9a9;
+  border-bottom: 1px solid #a9a9a9;
+}
+.producto-carrito:hover{
+  background-color: rgb(206, 205, 205);
 }
 .p-carrito{
   margin: 0;
+  width: 100px;
+}
+.img-carrito-container{
+  display: flex;
+  justify-content: start;
+}
+.cada-producto{
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.img-producto-carrito{
+  width: 90px;
+  height: 75px;
 }
 .imagen-carrito {
   width: 90px;
@@ -419,8 +452,6 @@ main {
 
 /* // HEADER */
 
-
-
 /* PAGINA PRODUCTOS */
 
 h1 {
@@ -436,42 +467,63 @@ h2 {
 }
 
 h3 {
-    margin-left: 10px;
+    text-align: center;
     max-width: 30px;
     height: 50px;
 }
-
+.todos-productos{
+  user-select: none;
+}
 .productos-categoria {
     display: flex;
     width: 85%;
-    background-color: rgb(150, 228, 150);
+    background-color: rgb(237, 241, 247);
     margin: 0 auto;
     padding: 20px;
+    box-shadow: 0 0 10px 1px black;
+    border-radius: 10px;
+    overflow: auto;
+}
+
+.productos-categoria::-webkit-scrollbar {
+    height: 14px;
+}
+
+.productos-categoria::-webkit-scrollbar-track {
+    border-radius: 10px; 
+}
+
+.productos-categoria::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+.productos-categoria::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .producto-item {
     margin: 0 20px;
+    min-width: 156px;
     padding: 15px;
     border: 1px solid black;
     max-height: 310px;
     background-color: #d3d3d3;
     border-radius: 8px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+.producto-item a{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .parrafo-y-img {
     display: flex;
 }
 
-.p-contenedor {
-    margin: auto 0;
-}
-
-.P-producto {
-    font-size: 14px;
-    margin: 10px 0 0 10px;
-    padding: 0;
-    display: none;
-}
 
 .img-producto {
     height: 120px;
@@ -484,13 +536,6 @@ h3 {
 
 .img-producto:hover {
     transform: scale(1.1);
-}
-
-.producto-item:hover .P-producto {
-    display: block;
-    width: 130px;
-    transition: all .3s;
-    /* NOSE PORQUE NO ANDA :( */
 }
 
 .botonAgregarCarrito {
