--- a/FrontEND/Page/Productos/Productos.css
+++ b/FrontEND/Page/Productos/Productos.css
@@ -365,6 +365,7 @@ main {
 }
 .menu ul ul li a {
   padding: 8px 15px;
+  font-size: 15px;
 }
 .menu ul ul ul {
   left: 100%;
@@ -459,7 +460,7 @@ h1 {
     align-items: center;
     text-align: center;
     margin: 50px auto;
-    font-size: 2.7rem;
+    font-size: 24px;
 }
 
 h2 {
