--- a/FrontEND/Page/ReservasUsuarios/ReservaUsuario.css
+++ b/FrontEND/Page/ReservasUsuarios/ReservaUsuario.css
@@ -453,6 +453,40 @@ main {
 /* // HEADER */
 
 
+/*MAIN*/
+
+
+.h1_reservas{
+  text-align: center;
+  margin-top: 100px;
+  font-size: 24px;
+}
+
+table{
+   width: 80%;
+   margin: 70px auto 0 auto;
+   background-color: #ccc;
+   border-collapse: collapse;
+}
+th{
+  width: 25%;
+  background-color: rgb(138, 210, 238);
+  padding: 9px;
+  border-bottom: 1px solid black;
+  border: 1px solid black;
+}
+td{
+  text-align: center;
+  padding: 5px;
+  border: 1px solid #494646;
+}
+tr:hover{
+  
+  background-color: #a8a0a0;
+}
+
+
+
 /*alerta personalizada :)*/
 
 #fondoOscuro {
@@ -523,7 +557,6 @@ main {
 /* FOOTER */
 
 footer {
-    margin-top: 500px;
     width: 100%;
     background-color: #979292;
     min-height: 170px;
