--- a/FrontEND/Page/Cuenta/Micuenta.css
+++ b/FrontEND/Page/Cuenta/Micuenta.css
@@ -289,6 +289,8 @@ main {
 }
 .ReservasAdmin {
   border-bottom: 1px solid black;
+}
+.ReservasAdmin2{
   background-color: #9dd0f4;
 }
 .OfertaAdmin {
@@ -443,7 +445,6 @@ main {
 }
 
 /* // HEADER */
-
 
 
 /* MAIN  */
@@ -717,7 +718,7 @@ input[type="submit"]:hover{
   /* FOOTER */
   
   footer {
-    margin-top: 500px;
+    margin-top: 100px;
     width: 100%;
     background-color: #979292;
     min-height: 170px;
