--- a/FrontEND/Page/ReservasUsuarios/ReservaUsuario.css
+++ b/FrontEND/Page/ReservasUsuarios/ReservaUsuario.css
@@ -289,6 +289,8 @@ main {
 }
 .ReservasAdmin {
   border-bottom: 1px solid black;
+}
+.ReservasAdmin2{
   background-color: #9dd0f4;
 }
 .OfertaAdmin {
@@ -445,7 +447,6 @@ main {
 /* // HEADER */
 
 
-
 /*MAIN*/
 
 
@@ -454,7 +455,17 @@ main {
   margin-top: 100px;
   font-size: 24px;
 }
-
+.aviso-reservas{
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+.aviso-reservas img{
+  height: 50px;
+  width: 50px;
+  user-select: none;
+}
 table{
    width: 80%;
    margin: 70px auto 0 auto;
