--- a/FrontEND/Page/Inicio/Inicio.css
+++ b/FrontEND/Page/Inicio/Inicio.css
@@ -466,7 +466,7 @@ main {
   top: 40px;
   left: 22%; 
   font-size: 2vw;
-  color: red;
+  color: #0b8dea;
 }
 
 #ofertas{
@@ -499,7 +499,7 @@ main {
   top: 145px;
   right: 28%; 
   font-size: 1.3vw;
-  color: red;
+  color: #0b8dea;
 }
 
 @media (max-width: 820px){
