--- a/FrontEND/Page/Inicio/Inicio.css
+++ b/FrontEND/Page/Inicio/Inicio.css
@@ -523,131 +523,34 @@ main {
 }
  /* // HEADER  */
 
-
- /* BOTON  */
-
- .wrapper{
-  position: relative;
-  left:50%;
-  transform: translate(-50%, -50%);
-  width: fit-content;
-  margin-top: 100px;
-  margin-bottom: 40px;
+.anuncio-1{
+  width: 100%;
+  height: 400px;
+  display: flex;
+  margin: 0;
+  background-color: var(--clarito-color);
 }
-.wrapper button{
-  width:200px;
-  height:70px;
-  background: linear-gradient(to left top, #4492eb 50%, #235793 50%);
-  border-style: none;
-  color:#fff;
-  font-size: 23px;
-  letter-spacing: 3px;
-  font-family: 'Lato';
-  font-weight: 600;
-  outline: none;
-  cursor: pointer;
-  position: relative;
-  padding: 0px;
-  overflow: hidden;
-  transition: all .5s;
-  box-shadow: 0px 1px 2px rgba(0,0,0,.2);
+.nombre-y-imagen{
+  width: 50%;
 }
-.wrapper button span{
-  position: absolute;
-  display: block;
+.nombre-y-imagen .img-a1{
+  margin: auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.wrapper button span:nth-child(1){
-  height: 3px;
-  width:200px;
-  top:0px;
-  left:-200px;
-  background: linear-gradient(to right, rgba(0,0,0,0), #83e0f5);
-  border-top-right-radius: 1px;
-  border-bottom-right-radius: 1px;
-  animation: span1 2s linear infinite;
-  animation-delay: 1s;
+.detalles-anuncio1{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
-@keyframes span1{
-  0%{
-      left:-200px
-  }
-  100%{
-      left:200px;
-  }
+.h2-a1{
+  font-size: 20px;
 }
-.wrapper button span:nth-child(2){
-  height: 70px;
-  width: 3px;
-  top:-70px;
-  right:0px;
-  background: linear-gradient(to bottom, rgba(0,0,0,0), #83e0f5);
-  border-bottom-left-radius: 1px;
-  border-bottom-right-radius: 1px;
-  animation: span2 2s linear infinite;
-  animation-delay: 2s;
-}
-@keyframes span2{
-  0%{
-      top:-70px;
-  }
-  100%{
-      top:70px;
-  }
-}
-.wrapper button span:nth-child(3){
-  height:3px;
-  width:200px;
-  right:-200px;
-  bottom: 0px;
-  background: linear-gradient(to left, rgba(0,0,0,0), #83e0f5);
-  border-top-left-radius: 1px;
-  border-bottom-left-radius: 1px;
-  animation: span3 2s linear infinite;
-  animation-delay: 3s;
-}
-@keyframes span3{
-  0%{
-      right:-200px;
-  }
-  100%{
-      right: 200px;
-  }
-}
-
-.wrapper button span:nth-child(4){
-  height:70px;
-  width:3px;
-  bottom:-70px;
-  left:0px;
-  background: linear-gradient(to top, rgba(0,0,0,0), #83e0f5);
-  border-top-right-radius: 1px;
-  border-top-left-radius: 1px;
-  animation: span4 2s linear infinite;
-  animation-delay: 4s;
-}
-@keyframes span4{
-  0%{
-      bottom: -70px;
-  }
-  100%{
-      bottom:70px;
-  }
-}
-
-.wrapper button:hover{
-  transition: all .5s;
-  transform: rotate(-3deg) scale(1.1);
-  box-shadow: 0px 3px 5px rgba(0,0,0,.4);
-}
-.wrapper button:hover span{
-  animation-play-state: paused;
-}
-
-
-
-
-
 
 /* INICIO */
 
