--- a/FrontEND/Page/Cuenta/Micuenta.css
+++ b/FrontEND/Page/Cuenta/Micuenta.css
@@ -292,6 +292,7 @@ main {
 }
 .ReservasAdmin2{
   background-color: #9dd0f4;
+  border-bottom: 1px solid black;
 }
 .OfertaAdmin {
   border-bottom: 1px solid black;
