--- a/FrontEND/Page/Administrador/GestionarProductos.css
+++ b/FrontEND/Page/Administrador/GestionarProductos.css
@@ -447,6 +447,36 @@ main {
 
 /* MAIN */
 
+.filtro-container{
+display: flex;
+margin: 0 auto 30px auto;
+justify-content: center;
+}
+.label-filtro{
+  font-size: 18px;
+  align-items: center;
+  justify-content: center;
+  margin: auto 0;
+  margin-right: 6px;
+}
+.select-filtro{
+  padding: 9px;
+}
+.boton-filtro{
+  width: 100px;
+  height: 30px;
+  align-items: center;
+  justify-content: center;
+  margin: auto 0;
+  margin-left: 10px;
+  border-radius: 9px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+.boton-filtro:hover{
+  opacity: .8;
+}
+
 table{
     margin: 0 auto;
     background-color: #ededed;
