--- a/FrontEND/Page/Inicio/Inicio.css
+++ b/FrontEND/Page/Inicio/Inicio.css
@@ -523,16 +523,9 @@ main {
 }
  /* // HEADER  */
 
- .bigsale{
-  width:200px;
-  position: absolute;
-  left: -60px;
-  top: -40px;
-  transform: rotate(-25deg);
- }
-
-.anuncio-1{
-  width: 85%;
+/* ANUNCIO ADMINISTRADOR */
+.ofertaa{
+  width: 70%;
   height: 400px;
   display: flex;
   margin: 40px auto;
@@ -540,6 +533,26 @@ main {
   border-radius: 10px;
   background-color: var(--clarito-color);
   box-shadow: 0 0 10px 1px black;
+  transition: transform 0.2s;   /* FLETAR SI NO GUSTA*/
+}
+.ofertaa:hover{
+  transform: scale(1.05);    /* FLETAR SI NO GUSTA*/
+}
+ .bigsale{
+  width:200px;
+  position: absolute;
+  left: -60px;
+  top: -40px;
+  transform: rotate(-25deg);
+  transition: transform 1.3s ease; /* FLETAR SI NO GUSTA*/
+ }
+ .bigsale:hover{
+  transform: rotate(335deg); /* FLETAR SI NO GUSTA*/
+ }
+
+.anuncio-1{
+  margin: 0;
+  padding: 0;
 }
 .nombre-y-imagen{
   width: 50%;
@@ -569,34 +582,6 @@ main {
 
 /* INICIO */
 
-.anuncio-Inicio-contenedor {
-  width: 100%;
-  height: 400px;
-  overflow: hidden;
-  position: relative;
-}
-
-.anuncio-Inicio {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.titulo {
-  display: flex;
-  width: 100%;
-  margin: 0 auto;
-  align-items: center;
-  justify-content: center;
-  user-select: none;
-}
-
-.titulo img {
-  height: 180px;
-  width: 450px;
-  margin: 60px 0;
-}
-
 h1 {
   margin-top: 310px;
   text-decoration-line: underline;
@@ -613,9 +598,8 @@ h5{
   animation: moverTexto 1s ease-in-out infinite;
   text-align: center;
   font-size: 40px;
-  margin-top:300px;
+  margin: 80px auto 0 auto;
   width: 100%;
-  margin: 0 auto;
 }
 @keyframes moverTexto {
   0% { transform: translateY(0); }
