--- a/FrontEND/Page/Cuenta/Micuenta.css
+++ b/FrontEND/Page/Cuenta/Micuenta.css
@@ -448,6 +448,19 @@ main {
 /* // HEADER */
 
 
+
+/* BOTON CARRITO*/
+.CambiarCantCarrito{
+  padding: 6px 6px;
+  border-radius: 3px;
+  border: 1px solid black;
+  background-color: #c1bbbb;
+  cursor: pointer;
+}
+.CambiarCantCarrito:hover{
+  background-color: #cac6c6;
+}
+
 /* MAIN  */
 .mensaje{
     display: flex;
