--- a/FrontEND/Page/Productos/Productos.css
+++ b/FrontEND/Page/Productos/Productos.css
@@ -447,6 +447,17 @@ main {
 
 /* // HEADER */
 
+/* BOTON CARRITO*/
+.CambiarCantCarrito{
+  padding: 6px 6px;
+  border-radius: 3px;
+  border: 1px solid black;
+  background-color: #c1bbbb;
+  cursor: pointer;
+}
+.CambiarCantCarrito:hover{
+  background-color: #cac6c6;
+}
 
 /* PAGINA PRODUCTOS */
 
