--- a/FrontEND/Page/ProductosDetalles/DetalleProducto.css
+++ b/FrontEND/Page/ProductosDetalles/DetalleProducto.css
@@ -451,13 +451,19 @@ main {
 /* MAIN */
 
 
+
+/* BOTON CARRITO*/
 .CambiarCantCarrito{
   padding: 6px 6px;
   border-radius: 3px;
-  border: 1px solid var(--principal-color);
-  background-color: #e7d7d7;
+  border: 1px solid black;
+  background-color: #c1bbbb;
   cursor: pointer;
 }
+.CambiarCantCarrito:hover{
+  background-color: #cac6c6;
+}
+
 h1 {
     display: flex;
     align-items: center;
@@ -537,6 +543,20 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #0056b3;
 }
+.cantidadInput{
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin-top: 28px;
+}
+.inputCantidad{
+width: 50px;
+height: 35px;
+}
+.h5-cant{
+  margin: 0 9px 0 0;
+}
+
 
 /*alerta personalizada :)*/
 
